--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,12 @@
     immutable,
     max-age=31536000,
     '''
+
+[[plugins]]
+package = "@netlify/plugin-lighthouse"
+  [plugins.inputs.thresholds]
+    performance = 0.9
+    accessibility = 0.9
+    best-practices = 0.9
+    seo = 0.9
+    pwa = 0.0 # We could bump this up if we support PWA in future
