--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,13 @@
 package = "netlify-plugin-no-more-404"
 
 [[plugins]]
+package = "netlify-plugin-checklinks"
+  [plugins.inputs]
+  entryPoints = [
+    "*.html",
+  ]
+
+[[plugins]]
 package = "@netlify/plugin-lighthouse"
   [plugins.inputs.thresholds]
     performance = 0.9
