--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@netlify/plugin-lighthouse": "^1.2.1",
     "@netlify/plugin-sitemap": "^0.8.1",
+    "netlify-plugin-checklinks": "^4.1.1",
     "netlify-plugin-no-more-404": "^0.0.15"
   }
 }
