--- a/netlify.toml
+++ b/netlify.toml
@@ -30,5 +30,8 @@ package = "@netlify/plugin-lighthouse"
     seo = 0.9
     pwa = 0.0 # We could bump this up if we support PWA in future
 
+  [plugins.inputs]
+    output_path = "lighthouse/index.html"
+
 [[plugins]]
 package = "@netlify/plugin-sitemap"
