feat: stop loading scripts with incorrect mimetype
Guided by [Mozilla Web Security: X-Content-Type-Options][1] docs.

[1]: https://infosec.mozilla.org/guidelines/web_security#x-content-type-options

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,11 @@
   publish = "src"
 
 [[headers]]
+  for = "/*"
+  [headers.values]
+    X-Content-Type-Options = "nosniff"
+
+[[headers]]
   for = "/Inter.var.woff2*"
   [headers.values]
     cache-control = '''
