feat: set Referrer Policy
Deliberately mirroring standard browser policy.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
+    Referrer-Policy = "strict-origin-when-cross-origin"
     X-Content-Type-Options = "nosniff"
 
 [[headers]]
