--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 # Explicitly sets publish directory
 # Right now we have no build, so we can just push `src` out
 [build]
-  publish = "src"
+  command = "yarn build"
+  publish = "dist"
 
 # Adds Content Security Policy and other security features
 # If your scripts won't run and your images won't load,
@@ -14,9 +15,9 @@
     base-uri 'none';
     default-src 'self';
     connect-src https://plausible.io;
-    img-src 'self';
+    img-src 'self' https://res.cloudinary.com;
     object-src 'none';
-    script-src https://plausible.io/js/plausible.js;
+    script-src https://plausible.io/js/plausible.js 'unsafe-inline';
     style-src 'self' 'unsafe-inline';
     """
     Referrer-Policy = "strict-origin-when-cross-origin"
