--- a/netlify.toml
+++ b/netlify.toml
@@ -22,6 +22,22 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     X-Content-Type-Options = "nosniff"
 
+# A special Content Security Policy for Lighthouse
+[[headers]]
+  for = "/lighthouse/*"
+  [headers.values]
+    Content-Security-Policy = """
+    frame-ancestors 'none';
+    base-uri 'none';
+    default-src 'self';
+    img-src data:;
+    object-src 'none';
+    script-src 'unsafe-inline';
+    style-src 'self' 'unsafe-inline';
+    """
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    X-Content-Type-Options = "nosniff"
+
 # Helps prevent some very noticeable FOUT on repeat visits
 [[headers]]
   for = "/Inter.var.woff2*"
