--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@measured/puck": "^0.4.0",
+    "@supabase/supabase-js": "^2.29.0",
     "classnames": "^2.3.2",
     "next": "^13.4.1",
     "react": "^18.2.0",
@@ -22,5 +23,8 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
+  },
+  "engines": {
+    "node": "18.17.x"
   }
 }
