--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "encoding": "^0.1.13",
     "eslint-config-custom": "*",
     "tsconfig": "*",
     "typescript": "^4.5.3"
