--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
-    "@measured/puck": "^0.5.0",
-    "@measured/puck-plugin-heading-analyzer": "^0.5.0",
+    "@measured/puck": "^0.6.0",
+    "@measured/puck-plugin-heading-analyzer": "^0.6.0",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -12,7 +12,8 @@
     "classnames": "^2.3.2",
     "next": "^13.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
