--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.29.0",
     "classnames": "^2.3.2",
-    "next": "^13.4.1",
+    "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -18,6 +18,7 @@
     "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
+    "supports-color": "8.1.1",
     "unified": "^10.1.2"
   },
   "devDependencies": {
